// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cvlXHq hCdUXs"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-hJhISk kMtNNf"
      tabindex="0"
    >
      <span
        class="sc-lhMhQd TFhet"
      >
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-kHdsLW gRPvGu"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gVkspn bXWGmD"
    >
      : 
    </i>
    <span
      class="sc-bzPltN fRRpws"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message mixing emoji and text renders them inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cvlXHq hCdUXs"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-hJhISk kMtNNf"
      tabindex="0"
    >
      <span
        class="sc-lhMhQd TFhet"
      >
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-kHdsLW gRPvGu"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gVkspn bXWGmD"
    >
      : 
    </i>
    <span
      class="sc-bzPltN fRRpws"
    >
      nice game 
      <div
        class="sc-fotPuT jrxelZ sc-dwFTru hIOCiC"
        tabindex="-1"
      >
        <span
          class="sc-DtpbB lcPFmk"
        >
          🔥
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message sent as an emote reads as an action line 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cvlXHq hCdUXs"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-hJhISk kMtNNf"
      tabindex="0"
    >
      <span
        class="sc-lhMhQd TFhet"
      >
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-jWaCbC cZCTtL"
    >
      * 
    </span>
    <span
      class="sc-kTLoNQ lcQRjv sc-kHdsLW sc-dGXDvR gRPvGu eMlfvA"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
     
    <span
      class="sc-bzPltN sc-PZvbA fRRpws VrQNC"
    >
      waves at everyone
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cvlXHq hCdUXs"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-hJhISk kMtNNf"
      tabindex="0"
    >
      <span
        class="sc-lhMhQd TFhet"
      >
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-kHdsLW gRPvGu"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gVkspn bXWGmD"
    >
      : 
    </i>
    <span
      class="sc-bzPltN fRRpws"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cvlXHq hCdUXs"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-hJhISk kMtNNf"
      tabindex="0"
    >
      <span
        class="sc-lhMhQd TFhet"
      >
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-kHdsLW gRPvGu"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gVkspn bXWGmD"
    >
      : 
    </i>
    <span
      class="sc-bzPltN fRRpws"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-kTLoNQ lcQRjv sc-jYmMys ekkyTN"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dwsoFP bAeoWW"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cvlXHq hCdUXs"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-hJhISk kMtNNf"
      tabindex="0"
    >
      <span
        class="sc-lhMhQd TFhet"
      >
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-kHdsLW gRPvGu"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gVkspn bXWGmD"
    >
      : 
    </i>
    <span
      class="sc-bzPltN fRRpws"
    >
      hey
       
      <span
        class="sc-kTLoNQ lcQRjv sc-jYmMys ekkyTN"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dwsoFP bAeoWW"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-kTLoNQ lcQRjv sc-jYmMys ekkyTN"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dwsoFP bAeoWW"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cvlXHq hCdUXs"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-hJhISk kMtNNf"
      tabindex="0"
    >
      <span
        class="sc-lhMhQd TFhet"
      >
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-kHdsLW gRPvGu"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gVkspn bXWGmD"
    >
      : 
    </i>
    <span
      class="sc-bzPltN fRRpws"
    >
      hey
       
      <span
        class="sc-kTLoNQ lcQRjv sc-jYmMys ekkyTN"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dwsoFP bAeoWW"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cvlXHq hCdUXs"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-hJhISk kMtNNf"
      tabindex="0"
    >
      <span
        class="sc-lhMhQd TFhet"
      >
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-kHdsLW gRPvGu"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gVkspn bXWGmD"
    >
      : 
    </i>
    <span
      class="sc-bzPltN fRRpws"
    >
      <span
        class="sc-kTLoNQ lcQRjv sc-jYmMys ekkyTN"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dwsoFP bAeoWW"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cvlXHq hCdUXs"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-hJhISk kMtNNf"
      tabindex="0"
    >
      <span
        class="sc-lhMhQd TFhet"
      >
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-kHdsLW gRPvGu"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gVkspn bXWGmD"
    >
      : 
    </i>
    <span
      class="sc-bzPltN fRRpws"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-kTLoNQ lcQRjv sc-jYmMys ekkyTN"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dwsoFP bAeoWW"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cvlXHq gxIzcz"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-hJhISk kMtNNf"
      tabindex="0"
    >
      <span
        class="sc-lhMhQd TFhet"
      >
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-kHdsLW gRPvGu"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gVkspn bXWGmD"
    >
      : 
    </i>
    <span
      class="sc-bzPltN fRRpws"
    >
      Hey
       
      <span
        class="sc-kTLoNQ lcQRjv sc-jYmMys ekkyTN"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-dwsoFP bAeoWW"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with only emoji renders them jumbo-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cvlXHq hCdUXs"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-hJhISk kMtNNf"
      tabindex="0"
    >
      <span
        class="sc-lhMhQd TFhet"
      >
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-kHdsLW gRPvGu"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gVkspn bXWGmD"
    >
      : 
    </i>
    <span
      class="sc-bzPltN fRRpws"
    >
      <div
        class="sc-fotPuT jrxelZ sc-dwFTru hIOCiC"
        tabindex="-1"
      >
        <span
          class="sc-DtpbB hxrnTT"
        >
          🔥
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-dwFTru hIOCiC"
        tabindex="-1"
      >
        <span
          class="sc-DtpbB hxrnTT"
        >
          🔥
        </span>
      </div>
       
      <div
        class="sc-fotPuT jrxelZ sc-dwFTru hIOCiC"
        tabindex="-1"
      >
        <span
          class="sc-DtpbB hxrnTT"
        >
          🎉
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with too many emoji for jumbo stays inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cvlXHq hCdUXs"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-hJhISk kMtNNf"
      tabindex="0"
    >
      <span
        class="sc-lhMhQd TFhet"
      >
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-gVkspn bXWGmD"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-kTLoNQ lcQRjv sc-kHdsLW gRPvGu"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-dwsoFP bAeoWW"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-gVkspn bXWGmD"
    >
      : 
    </i>
    <span
      class="sc-bzPltN fRRpws"
    >
      <div
        class="sc-fotPuT jrxelZ sc-dwFTru hIOCiC"
        tabindex="-1"
      >
        <span
          class="sc-DtpbB lcPFmk"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-dwFTru hIOCiC"
        tabindex="-1"
      >
        <span
          class="sc-DtpbB lcPFmk"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-dwFTru hIOCiC"
        tabindex="-1"
      >
        <span
          class="sc-DtpbB lcPFmk"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-dwFTru hIOCiC"
        tabindex="-1"
      >
        <span
          class="sc-DtpbB lcPFmk"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-dwFTru hIOCiC"
        tabindex="-1"
      >
        <span
          class="sc-DtpbB lcPFmk"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-dwFTru hIOCiC"
        tabindex="-1"
      >
        <span
          class="sc-DtpbB lcPFmk"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-dwFTru hIOCiC"
        tabindex="-1"
      >
        <span
          class="sc-DtpbB lcPFmk"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-dwFTru hIOCiC"
        tabindex="-1"
      >
        <span
          class="sc-DtpbB lcPFmk"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-dwFTru hIOCiC"
        tabindex="-1"
      >
        <span
          class="sc-DtpbB lcPFmk"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-dwFTru hIOCiC"
        tabindex="-1"
      >
        <span
          class="sc-DtpbB lcPFmk"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-dwFTru hIOCiC"
        tabindex="-1"
      >
        <span
          class="sc-DtpbB lcPFmk"
        >
          😀
        </span>
      </div>
    </span>
  </div>
</div>
`;
